<resources>
    <string name="app_name">Sauna Master</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date">Date</string>
    <string name="add_event">Add Event</string>
    <string name="hour">Hour</string>
    <string name="add">Add</string>
    <string name="address">Address</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="delete">Delete</string>
    <string name="map">Map</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration_as">Registration as...</string>
    <string name="guest">Guest</string>
    <string name="master">Master</string>
    <string name="place">Place</string>
    <string name="send">Send</string>

</resources>